# Distributed-Task-Scheduling-System

./: .env.example  .gitignore  CMakeLists.txt  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
api/: client.py  requirements.txt  server.py
database/: schema.sql
db/: init.sql  migrations.sql  seed.sql
docker/: Dockerfile  docker-compose.yml  orchestrator.Dockerfile  scheduler.Dockerfile  worker.Dockerfile
docs/: DESIGN_NOTES.md  INSTALL.md  architecture.md  commit-log.txt
k8s/: configmap.yaml  namespace.yaml  orchestrator-deployment.yaml  postgres-statefulset.yaml  scheduler-deployment.yaml  secrets.example.yaml  worker-deployment.yaml
ml/: ml_task.py
orchestrator/: Dockerfile  app.py  requirements.txt
orchestrator/app/: api.py  background.py  crud.py  db.py  main.py  models.py  schemas.py  settings.py
orchestrator/app/tests/: test_api.py
orchestrator/common/: db.py  schema.py
orchestrator/openapi/: openapi.yaml
scheduler/: CMakeLists.txt  main.py  pom.xml  requirements.txt
scheduler/common/: settings.py
scheduler/include/: load_balancer.hpp  profiler.hpp  scheduler.hpp  task.hpp  task_queue.hpp
scheduler/src/: load_balancer.cpp  main.cpp  profiler.cpp  scheduler.cpp  task.cpp
scheduler/src/main/java/com/dts/scheduler/: Backoff.java  Db.java  Prioritizer.java  SchedulerApp.java
scheduler/src/test/java/com/dts/scheduler/: PrioritizerTest.java
tests/: benchmark.py
worker/: CMakeLists.txt  Dockerfile  README.md  main.py  requirements.txt  tasks.py
worker/src/: main.cpp
